Mal-Sql-Grammar/target/generated-sources/antlr4/com/data/monkey/grammar/MalSqlParserParser.java
// Generated from com\data\monkey\grammar\MalSqlParser.g4 by ANTLR 4.9.2
package com.data.monkey.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MalSqlParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, DELETE=2, INSERT=3, UPDATE=4, FROM=5, HAVING=6, WHERE=7, ORDER=8, 
		BY=9, GROUP=10, INTO=11, AS=12, SOUNDS=13, REGEXP=14, FILTER=15, DURING=16, 
		CREATE=17, ALTER=18, DROP=19, SET=20, NULL=21, NOT=22, DISTINCT=23, DISTINCTROW=24, 
		HIGH_PRIORITY=25, MAX_STATEMENT_TIME=26, TABLE=27, TABLESPACE=28, VIEW=29, 
		SEQUENCE=30, TRIGGER=31, USER=32, INDEX=33, SESSION=34, PROCEDURE=35, 
		FUNCTION=36, PRIMARY=37, KEY=38, DEFAULT=39, CONSTRAINT=40, CHECK=41, 
		UNIQUE=42, FOREIGN=43, REFERENCES=44, EXPLAIN=45, FOR=46, IF=47, ALL=48, 
		UNION=49, EXCEPT=50, INTERSECT=51, MINUS=52, INNER=53, LEFT=54, RIGHT=55, 
		FULL=56, OUTER=57, JOIN=58, ON=59, SCHEMA=60, CAST=61, COLUMN=62, USE=63, 
		DATABASE=64, TO=65, AND=66, OR=67, XOR=68, CASE=69, WHEN=70, THEN=71, 
		ELSE=72, END=73, EXISTS=74, IN=75, NEW=76, ASC=77, DESC=78, IS=79, LIKE=80, 
		ESCAPE=81, BETWEEN=82, VALUES=83, INTERVAL=84, TRUE=85, FALSE=86, LIMIT=87, 
		BREAK=88, LAST=89, NONE=90, MINUTE=91, HOUR=92, DAY=93, WEEK=94, EVENTS=95, 
		FIFTEEN_MINUTE=96, NOW=97, EXPORT=98, LPAREN=99, RPAREN=100, LBRACE=101, 
		RBRACE=102, LBRACKET=103, RBRACKET=104, SEMI=105, COMMA=106, DOT=107, 
		DOTDOT=108, DOTDOTDOT=109, EQ=110, GT=111, LT=112, BANG=113, BANGBANG=114, 
		TILDE=115, QUES=116, COLON=117, COLONCOLON=118, COLONEQ=119, EQEQ=120, 
		LTEQ=121, LTEQGT=122, LTGT=123, GTEQ=124, NEQ=125, BANGEQ=126, BANGGT=127, 
		BANGLT=128, AMPAMP=129, BARBAR=130, BARBARSLASH=131, BARSLASH=132, PLUS=133, 
		SUB=134, STAR=135, SLASH=136, AMP=137, BAR=138, CARET=139, PERCENT=140, 
		LTLT=141, GTGT=142, MONKEYS_AT=143, POUND=144, DIV=145, MOD=146, UNDERLINE=147, 
		QUOTES=148, INT=149, FLOAT=150, NEG_INT=151, NEG_FLOAT=152, STRING=153, 
		LetterOrDigit=154, PARENTHESIS=155, WS=156;
	public static final int
		RULE_root = 0, RULE_columList = 1, RULE_allColumn = 2, RULE_nameOprand = 3, 
		RULE_name = 4, RULE_parenthesis = 5, RULE_identity = 6, RULE_tableName = 7, 
		RULE_exportExpr = 8, RULE_whereCluaster = 9, RULE_boolExpr = 10, RULE_basicBoolExpr = 11, 
		RULE_collection = 12, RULE_durationExpr = 13, RULE_duration = 14, RULE_filterByExpr = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "columList", "allColumn", "nameOprand", "name", "parenthesis", 
			"identity", "tableName", "exportExpr", "whereCluaster", "boolExpr", "basicBoolExpr", 
			"collection", "durationExpr", "duration", "filterByExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
			"'.'", "'..'", "'..,'", "'='", "'>'", "'<'", "'!'", "'!!'", "'~'", "'?'", 
			null, null, "':='", "'=='", "'<='", "'<=>'", null, "'>='", "'!='", null, 
			"'!>'", "'!<'", "'&&'", "'||'", "'||/'", "'|/'", "'+'", "'-'", "'*'", 
			"'/'", "'&'", "'|'", "'^'", null, "'<<'", "'>>'", "'@'", "'#'", null, 
			null, "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECT", "DELETE", "INSERT", "UPDATE", "FROM", "HAVING", "WHERE", 
			"ORDER", "BY", "GROUP", "INTO", "AS", "SOUNDS", "REGEXP", "FILTER", "DURING", 
			"CREATE", "ALTER", "DROP", "SET", "NULL", "NOT", "DISTINCT", "DISTINCTROW", 
			"HIGH_PRIORITY", "MAX_STATEMENT_TIME", "TABLE", "TABLESPACE", "VIEW", 
			"SEQUENCE", "TRIGGER", "USER", "INDEX", "SESSION", "PROCEDURE", "FUNCTION", 
			"PRIMARY", "KEY", "DEFAULT", "CONSTRAINT", "CHECK", "UNIQUE", "FOREIGN", 
			"REFERENCES", "EXPLAIN", "FOR", "IF", "ALL", "UNION", "EXCEPT", "INTERSECT", 
			"MINUS", "INNER", "LEFT", "RIGHT", "FULL", "OUTER", "JOIN", "ON", "SCHEMA", 
			"CAST", "COLUMN", "USE", "DATABASE", "TO", "AND", "OR", "XOR", "CASE", 
			"WHEN", "THEN", "ELSE", "END", "EXISTS", "IN", "NEW", "ASC", "DESC", 
			"IS", "LIKE", "ESCAPE", "BETWEEN", "VALUES", "INTERVAL", "TRUE", "FALSE", 
			"LIMIT", "BREAK", "LAST", "NONE", "MINUTE", "HOUR", "DAY", "WEEK", "EVENTS", 
			"FIFTEEN_MINUTE", "NOW", "EXPORT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACKET", "RBRACKET", "SEMI", "COMMA", "DOT", "DOTDOT", "DOTDOTDOT", 
			"EQ", "GT", "LT", "BANG", "BANGBANG", "TILDE", "QUES", "COLON", "COLONCOLON", 
			"COLONEQ", "EQEQ", "LTEQ", "LTEQGT", "LTGT", "GTEQ", "NEQ", "BANGEQ", 
			"BANGGT", "BANGLT", "AMPAMP", "BARBAR", "BARBARSLASH", "BARSLASH", "PLUS", 
			"SUB", "STAR", "SLASH", "AMP", "BAR", "CARET", "PERCENT", "LTLT", "GTGT", 
			"MONKEYS_AT", "POUND", "DIV", "MOD", "UNDERLINE", "QUOTES", "INT", "FLOAT", 
			"NEG_INT", "NEG_FLOAT", "STRING", "LetterOrDigit", "PARENTHESIS", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MalSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MalSqlParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(MalSqlParserParser.SELECT, 0); }
		public ColumListContext columList() {
			return getRuleContext(ColumListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(MalSqlParserParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MalSqlParserParser.EOF, 0); }
		public WhereCluasterContext whereCluaster() {
			return getRuleContext(WhereCluasterContext.class,0);
		}
		public DurationExprContext durationExpr() {
			return getRuleContext(DurationExprContext.class,0);
		}
		public ExportExprContext exportExpr() {
			return getRuleContext(ExportExprContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(SELECT);
			setState(33);
			columList();
			setState(34);
			match(FROM);
			setState(35);
			tableName();
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(36);
				whereCluaster();
				}
			}

			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FOR) {
				{
				setState(39);
				durationExpr();
				}
			}

			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPORT) {
				{
				setState(42);
				exportExpr();
				}
			}

			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumListContext extends ParserRuleContext {
		public List<NameOprandContext> nameOprand() {
			return getRuleContexts(NameOprandContext.class);
		}
		public NameOprandContext nameOprand(int i) {
			return getRuleContext(NameOprandContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MalSqlParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MalSqlParserParser.COMMA, i);
		}
		public AllColumnContext allColumn() {
			return getRuleContext(AllColumnContext.class,0);
		}
		public ColumListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterColumList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitColumList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitColumList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumListContext columList() throws RecognitionException {
		ColumListContext _localctx = new ColumListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_columList);
		int _la;
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
			case INT:
			case FLOAT:
			case NEG_INT:
			case NEG_FLOAT:
			case STRING:
			case LetterOrDigit:
			case PARENTHESIS:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				nameOprand();
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(48);
					match(COMMA);
					setState(49);
					nameOprand();
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				allColumn();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllColumnContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(MalSqlParserParser.STAR, 0); }
		public AllColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterAllColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitAllColumn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitAllColumn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllColumnContext allColumn() throws RecognitionException {
		AllColumnContext _localctx = new AllColumnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_allColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(STAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameOprandContext extends ParserRuleContext {
		public Token actualTableName;
		public Token alias;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MalSqlParserParser.DOT, 0); }
		public TerminalNode AS() { return getToken(MalSqlParserParser.AS, 0); }
		public List<TerminalNode> LetterOrDigit() { return getTokens(MalSqlParserParser.LetterOrDigit); }
		public TerminalNode LetterOrDigit(int i) {
			return getToken(MalSqlParserParser.LetterOrDigit, i);
		}
		public NameOprandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameOprand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterNameOprand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitNameOprand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitNameOprand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameOprandContext nameOprand() throws RecognitionException {
		NameOprandContext _localctx = new NameOprandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nameOprand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(60);
				((NameOprandContext)_localctx).actualTableName = match(LetterOrDigit);
				setState(61);
				match(DOT);
				}
				break;
			}
			setState(64);
			name(0);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(65);
				match(AS);
				setState(66);
				((NameOprandContext)_localctx).alias = match(LetterOrDigit);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	 
		public NameContext() { }
		public void copyFrom(NameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MulNameContext extends NameContext {
		public NameContext left;
		public Token op;
		public NameContext right;
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode STAR() { return getToken(MalSqlParserParser.STAR, 0); }
		public TerminalNode SLASH() { return getToken(MalSqlParserParser.SLASH, 0); }
		public TerminalNode MOD() { return getToken(MalSqlParserParser.MOD, 0); }
		public MulNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterMulName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitMulName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitMulName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AggregationNameContext extends NameContext {
		public BoolExprContext predicate;
		public TerminalNode LetterOrDigit() { return getToken(MalSqlParserParser.LetterOrDigit, 0); }
		public TerminalNode LPAREN() { return getToken(MalSqlParserParser.LPAREN, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MalSqlParserParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(MalSqlParserParser.COMMA, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public AggregationNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterAggregationName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitAggregationName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitAggregationName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddNameContext extends NameContext {
		public NameContext left;
		public Token op;
		public NameContext right;
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(MalSqlParserParser.PLUS, 0); }
		public TerminalNode SUB() { return getToken(MalSqlParserParser.SUB, 0); }
		public AddNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterAddName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitAddName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitAddName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenthesisNameContext extends NameContext {
		public ParenthesisContext parenthesis() {
			return getRuleContext(ParenthesisContext.class,0);
		}
		public ParenthesisNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterParenthesisName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitParenthesisName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitParenthesisName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LRNameContext extends NameContext {
		public TerminalNode LPAREN() { return getToken(MalSqlParserParser.LPAREN, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MalSqlParserParser.RPAREN, 0); }
		public LRNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterLRName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitLRName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitLRName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ColumnNameContext extends NameContext {
		public IdentityContext identity() {
			return getRuleContext(IdentityContext.class,0);
		}
		public ColumnNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterColumnName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitColumnName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitColumnName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BitwiseNameContext extends NameContext {
		public NameContext left;
		public Token op;
		public NameContext right;
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode AMP() { return getToken(MalSqlParserParser.AMP, 0); }
		public TerminalNode BAR() { return getToken(MalSqlParserParser.BAR, 0); }
		public TerminalNode CARET() { return getToken(MalSqlParserParser.CARET, 0); }
		public TerminalNode LTLT() { return getToken(MalSqlParserParser.LTLT, 0); }
		public TerminalNode GTGT() { return getToken(MalSqlParserParser.GTGT, 0); }
		public BitwiseNameContext(NameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).enterBitwiseName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalSqlParserListener ) ((MalSqlParserListener)listener).exitBitwiseName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MalSqlParserVisitor ) return ((MalSqlParserVisitor<? extends T>)visitor).visitBitwiseName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		return name(0);
	}

	private NameContext name(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		NameContext _localctx = new NameContext(_ctx, _parentState);
		NameContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_name, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				_localctx = new LRNameContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
